:sparkles: feat: entity printer and documentation
